--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="main">
+        <button id="butt">Start</button>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
