--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="main">
+        
+    </div>
+    <!-- <script src="anime.min.js"></script> -->
     <script src="index.js"></script>
 </body>
 </html>
